# pytest-overwatch

./: Makefile  README.md  justfile  pyproject.toml  shell.nix
pytest_overwatch/: __init__.py  app.py  plugin.py  worker.py
tests/: test_basics.py
