[tool.poetry]
name = "pytest-overwatch"
version = "0.1.0"
description = "Plugin for interactively running pytest like jest (nodejs)."
authors = ["Reiner Gerecke <me@reinergerecke.de>"]
readme = "README.md"
repository = "https://github.com/squiddy/pytest-overwatch"
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/squiddy/pytest-overwatch/issues"

[tool.poetry.dependencies]
python = "^3.6.10"
asyncinotify = "^1.0.0"
rich = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.plugins."pytest11"]
"name_of_plugin" = "pytest_overwatch.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"