[tool.poetry]
name = "pytest-overwatch"
version = "0.1.0"
description = "Plugin for interactively running pytest like jest (nodejs)."
authors = ["Reiner Gerecke <me@reinergerecke.de>"]
readme = "README.md"
repository = "https://github.com/squiddy/pytest-overwatch"
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/squiddy/pytest-overwatch/issues"

[tool.poetry.dependencies]
python = "^3.8"
asyncinotify = "^1.0.0"
textual = "^0.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "0.1.4"
mypy = "^1.7.0"

[tool.poetry.plugins."pytest11"]
"name_of_plugin" = "pytest_overwatch.plugin"

[tool.ruff]
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
